Updated swagger for documentation ALLOWED CORS
